Layout bug fixes

--- a/app/assets/stylesheets/components/team-members/index.scss
+++ b/app/assets/stylesheets/components/team-members/index.scss
@@ -1,4 +1,6 @@
 .index-team-member-profile-wrap {
+  margin-bottom: rem(10px);
+
   @include breakpoint(large) {
     @include grid-column(2, $gutter: (
       large: 3
